# quickORTEP

./: README.md  bond_edit_tracker.py  bond_manager.py  bonds.py  config.py  elements_table.py  event_handler.py  export.py  geometry_utils.py  graph_viewer.py  help_text.py  hud.py  main.py  message_panel.py  message_service.py  molecule.py  molecule_nci.py  normal_modes.py  ortep_molecule.py  ortep_renderer.py  ortep_viewer.py  pyproject.toml  quickORTEP.py  selection_manager.py  setup.py  test-sno.xyz  test_shapes.py  trajectory.py  trajectory_manager.py  trans-CH3SNO.xyz  vectors.py  zobjects.py
parsers/: __init__.py  base_parser.py  gaussian_parser.py  orca_parser.py  xyz_parser.py
x11view/: DejaVuSansMono.py  base.py  common.py  svg_canvas.py  window.py  x11_basic.py  x11_ss.py  x11view.ref.md
