[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickortep"
version = "0.1.0"
description = "A lightweight, fast molecular visualization tool with interactive bond editing, trajectory analysis, and normal mode visualization"
readme = "README.md"
authors = [
    {name = "Qadir Timerghazin", email = "qadir.timerghazin@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["molecule", "chemistry", "visualization", "ORTEP", "X11"]
dependencies = [
    "numpy>=1.19.0",
    "python-xlib>=0.31",
    "pillow>=8.0.0",
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/yourusername/quickortep"
"Bug Tracker" = "https://github.com/yourusername/quickortep/issues"

[project.scripts]
quickortep = "quickortep.quickORTEP:main"

[tool.setuptools]
packages = ["quickortep", "quickortep.x11view"]

[tool.setuptools.package-data]
quickortep = ["*.py"]
"quickortep.x11view" = ["*.py"]
